added io and unittest library

--- a/path/CMakeLists.txt
+++ b/path/CMakeLists.txt
@@ -5,3 +5,7 @@ install(
     DESTINATION include/rlx/path
     FILES_MATCHING PATTERN "*.hh*"
 )
+
+add_executable(test_has_ext tests/path-has-ext.cc)
+add_test(NAME "Path-Has-Extension"
+    COMMAND test_has_ext)
