--- a/sys/CMakeLists.txt
+++ b/sys/CMakeLists.txt
@@ -1,7 +1,7 @@
 include(GNUInstallDirs)
 
-install(
-    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
-    DESTINATION include/rlx/sys
-    FILES_MATCHING PATTERN "*.hh*"
-)
+# install(
+#     DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
+#     DESTINATION include/rlx/sys
+#     FILES_MATCHING PATTERN "*.hh*"
+# )
