--- a/path/CMakeLists.txt
+++ b/path/CMakeLists.txt
@@ -1,10 +1,10 @@
 include(GNUInstallDirs)
 
-# install(
-#     DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
-#     DESTINATION include/rlx/path
-#     FILES_MATCHING PATTERN "*.hh*"
-# )
+install(
+    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
+    DESTINATION include/rlx/path
+    FILES_MATCHING PATTERN "*.hh*"
+)
 
 add_executable(test_has_ext tests/path-has-ext.cc)
 add_test(NAME "Path-Has-Extension"
