--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,6 @@ add_subdirectory(tests)
 
 install(
     DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
-    DESTINATION include/rlx/utils
+    DESTINATION include/rlx/
     FILES_MATCHING PATTERN "*.hh"
 )
