--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,7 +1,8 @@
 include(GNUInstallDirs)
 
-# install(
-#     DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
-#     DESTINATION include/rlx/utils
-#     FILES_MATCHING PATTERN "*.hh*"
-# )
+install(
+    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
+    DESTINATION include/rlx/utils
+    FILES_MATCHING 
+    PATTERN "*.hh"
+)
