--- a/curl/CMakeLists.txt
+++ b/curl/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(curlcpp STATIC curl.cc)
+add_library(curlcpp STATIC SHARED curl.cc)
 target_link_libraries(curlcpp curl)
 
 install(FILES curl.hh DESTINATION include/rlx/curl)
